frontend/test/should_pass/from_storage.gm
node class N;
node class NN extends N;
node class M
{
	x:int;
	s:set<M>;
	m:map<M,M>;
	a:array<M>;
}

edge class E;
edge class EE extends E;
edge class F
{
	x:string;
	s:set<F>;
	m:map<F,F>;
	a:array<F>;
}
undirected edge class G
{
	x:boolean;
}
