frontend/test/should_fail/method_model_inh_ovrrd_failef2.gm
edge class E
{
	function foo(var x:int) : int
	{
		return (42);
	}
		
	function qux(-n:E->) : string
	{
		return("42");
	}
}

edge class EE extends E
{	
	function foo(var x:boolean) : int
	{
		return (42);
	}
		
	function qux(-n:EE->) : boolean
	{
		return(true);
	}
}
